language/move-lang/tests/move_check/translated_ir_tests/commands/continue_outside_loop.exp
error: 

   ┌── tests/move_check/translated_ir_tests/commands/continue_outside_loop.move:3:5 ───
   │
 3 │     continue
   │     ^^^^^^^^ Invalid usage of 'continue'. 'continue' can only be used inside a loop body
   │

